--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@uncover/games-mozaic",
   "version": "0.0.1",
   "scripts": {
-    "build:docs": "npm i && webpack --config webpack.config.docs.js",
+    "build:docs": "webpack --config webpack.config.docs.js --mode production",
     "postinstall": "npm update @uncover/games-common",
     "start": "webpack serve --config webpack.config.dev.js --progress"
   },
@@ -15,8 +15,8 @@
     "@uncover/js-utils": "^0.0.12",
     "@uncover/js-utils-fetch": "^0.0.3",
     "@uncover/js-utils-logger": "^0.1.5",
-    "@uncover/ward": "^0.1.8",
-    "@uncover/ward-react": "^0.1.10",
+    "@uncover/ward": "^0.1.9",
+    "@uncover/ward-react": "^0.1.11",
     "i18next": "^22.4.9",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.1.1",
@@ -40,7 +40,7 @@
     "html-webpack-plugin": "^5.5.0",
     "postcss": "^8.4.21",
     "postcss-loader": "^7.0.2",
-    "postcss-preset-env": "^7.8.3",
+    "postcss-preset-env": "^8.0.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
@@ -55,14 +55,5 @@
       "node": true,
       "jest": true
     }
-  },
-  "standard": {
-    "parser": "babel-eslint",
-    "globals": [],
-    "env": [
-      "jest",
-      "browser",
-      "es6"
-    ]
   }
 }
